--- a/films/style.css
+++ b/films/style.css
@@ -8,17 +8,25 @@
     left: 50%;
     transform: translate(-50%, 0);
     width: 70%;
-    background-color: rgb(194, 211, 216);
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    z-index: 1;
+    box-shadow: 0px 0px 46px 22px rgba(34, 60, 80, 0.2);
+    height: 100%;
 }
-form{
+form[name='filmForm']{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
+    display: none;
+}
+form[name='filterForm']{
+    display: none;
+    opacity: 0;
+    transition: all 0.5s ease;
 }
 #entry{
     display: grid;
@@ -27,7 +35,40 @@ form{
     padding-bottom: 20px;
 }
 #entry > *{
-    display: block;
+    cursor: pointer;
+}
+.overlay{
+    width: 100%;
+    height: 100%;
+    background-color: gray;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    transition: all 1s ease;
+}
+.modal{
+    height: 500px;
+    background-color: white;
+    z-index: 3;
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 50%;
     border-radius: 10px;
-    flex: 0 0 25%;
+    box-shadow: 0px 0px 40px 35px rgba(34, 60, 80, 0.71);
+    padding: 40px;
+}
+.modalimg{
+    float: right;
+    border-radius: 10px;
+    width: 300px;
+    height: 300px;
+}
+#filter{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: flex-start;
 }
